--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
       - name: Get changed files using defaults
         id: changed-files
         uses: tj-actions/changed-files@v17.2
