--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,13 +6,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@master
+
       - name: Get changed files using defaults
         id: changed-files
         uses: tj-actions/changed-files@v17.2
+
       - name: List all added files
         run: |
-          for file in ${{ steps.changed-files.outputs.added_files }}; do
+          for file in ${{ steps.changed-files.outputs.modified_files }}; do
             echo "$file was added"
           done
       - name: Login to DockerHub
