--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@master
+		with:
+			fetch-depth: 2
 
       - name: Get changed files using defaults
         id: changed-files
